--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 body{
      font-family: 'Source Sans Pro', sans-serif;
      overflow-x: hidden;
+     overflow-y: scroll;
      width: 100vw;
      height: 200vh;
      color: white;
@@ -50,12 +51,12 @@ nav{
      height: 4 rem;
      filter: invert(100%);
 }
-#main-logo div{
+#logo-name{
      display: flex;
      align-items: center;
      padding-left: 0.5rem;
      font-family: 'Roboto', sans-serif;
-     font-size: 2rem;
+     font-size: 2.5rem;
      font-weight: 900;
      color: white;
 }
@@ -133,7 +134,6 @@ hr{
 .account .sub-acc{
      display: flex;
      height: 100%;
-     width: 15%;
      align-items: center;
      justify-content: space-between;
 }
@@ -153,6 +153,7 @@ hr{
      border-width: 1px;
      color : white;
      padding: 0 1rem;
+     margin: 0 0.4rem;
 }
 .account .sub-acc .first:hover{
      background-color: #242424;
@@ -163,7 +164,7 @@ hr{
 
 .account .sub-acc .second:hover{
      background-color: #242424;
-
+     
 }
 
 .account .sub-acc .second{
@@ -175,6 +176,7 @@ hr{
      width: 5.5rem;
      justify-content: flex-start;
      padding: 0 0.4rem;
+     margin: 0 0.4rem;
      background-color: rgba(0, 0, 0, 0.986);
 }
 .second div{
@@ -331,24 +333,14 @@ input{
 }
 .playlist{
      width: 100%;
-     height:50rem;
+     height:auto;
      display: flex;
      flex-direction: row;
      justify-content: space-evenly;
      padding: 0  2rem;
      overflow: hidden;
 }
-#line{
-     position: absolute;
-    top: 46rem;
-    left: 21rem;
-    height: 0.1px;
-    border-color: rgba(167, 167, 167, 0.521);
-    width: 76%;
-    z-index: -1;
-}
 .col1,.col2,.col3,.col4{
-     padding: 0.5rem 0.5rem;
      height: 100%;
      color:white;
 }
@@ -363,9 +355,6 @@ input{
 }
 .col4{
      width: 10%;
-}
-.box1{
-     width: 100%;
 }
 .box1{
      display: flex;
@@ -413,9 +402,11 @@ input{
 .box4{
      display: flex;
      width: 100%;
+     flex-shrink: 2;
      height: 4rem;
      justify-content: center;
      align-items: center;
+     flex-wrap: wrap ;
 }
 
 i{
@@ -433,4 +424,38 @@ i{
 }
 #volume-btn{
      color: #ababab;
+}
+
+.title{
+     box-shadow: inset 0px -1px 0px 0px #5c5c5c;
+     height: 5rem;
+     margin-bottom: 0.8rem;
+}
+
+::-webkit-scrollbar{
+     width: 10px;
+}
+
+::-webkit-scrollbar-track-piece{
+     background-color: transparent;
+}
+::-webkit-scrollbar-thumb{
+     background:#ababab;
+     border-radius: 5px;
+}
+
+@media(max-width : 1300px) {
+     #curr-name{
+          font-size: 0.7rem;
+     }
+     #curr-singer{
+          font-size: 0.5rem;
+     }
+     #logo-name{
+          font-size: 2rem;
+     }
+
+     .option{
+          font-size: 0.8rem;
+     }
 }
